--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
+body {
+    background: #57606f !important;
+    font-family: 'Roboto', sans-serif !important;
+}
+
+#table-container {
+    margin-top: 150px !important;
+}
+
+#myTable {
+    max-width: 700px;
+}
+
+#button-container .btn {
+    width: 233.4px;
+}
+
 .selected {
     color: black;
-    background: gray;
+    background: #8395a7;
 }
 
 .btn:focus {
